--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@ portugAcurteApp.controller('mainController', function($scope, $location, $http) 
 
     $scope.loadTags = function (){
         if ($scope.token && $scope.hashtag){
-            var url = "https://api.instagram.com/v1/tags/" + $scope.hashtag + "?access_token=" + $scope.token;
+            var url = "https://api.instagram.com/v1/tags/" + $scope.hashtag + "/media/recent?access_token=" + $scope.token;
             console.log("calling", url);
-            $http.jsonp(url).then(function(){
-                console.log(arguments);
+            $http.jsonp(url, {jsonpCallbackParam: 'callback'})
+            .success(function(data){
+                console.log(data);
             });
         } else {
             console.log("no token or hashtag");
