--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ portugAcurteApp.controller('mainController', function($scope, $location, $http) 
 
     $scope.loadTags = function (){
         if ($scope.token && $scope.hashtag){
-            var url = "https://api.instagram.com/v1/tags/" + $scope.hashtag + "/media/recent?callback=callbackFunction&access_token=" + $scope.token;
+            var url = "https://api.instagram.com/v1/tags/" + $scope.hashtag + "/media/recent?callback=JSON_CALLBACK&access_token=" + $scope.token;
             console.log("calling", url);
-            $http.jsonp(url, {jsonpCallbackParam: 'callback'})
+            $http.jsonp(url)
             .success(function(data){
                 console.log(data);
             });
