--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Women Of Samba</title>
+    <title>North Side Studio</title>
 	<style>
 .center {
     display: block;
@@ -9,6 +9,9 @@
     margin-right: auto;
     width: 50%;
 }
+		body {
+			background-color: #DDDDDD;
+		}
 	</style>    
 </head>
 <body>
